--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,13 @@
-body {
-	margin-top: 20px;
-	margin-left: 60px;
-	margin-right: 60px;
+.heading {
+	margin-left: 10%;
+	color: #FFFFFF;
 }
-
-.photo {
-	height: 150px;
+.jumbotron {
+	background-color: #643b87;
 }
-
-.name {
-	height: 75px;
+.introParagraph {
+	font-size: 15em;
 }
-
-.quote {
-	height: 75px;
-	width: 75%;
-}
-
-.frontpagedata {
-	text-align: justify;
-	margin-top: 50px;
-	font-size: 16px;
-}
-
-.contact {
-	margin-top: 50px;
-	font-size: 16px;
-	text-align: left;
+.introText {
+	font-size: 10em;
 }
