Adding work exp

--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@
 .intro-text {
 	margin-right: auto;
 	margin-left: 9%;
-	max-width: 800px;
+	max-width: 1200px;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 1.25em;
-	line-height: 25px;
+	font-size: 1.5em;
+	line-height: 30px;
 }
 
 .section {
@@ -72,6 +72,33 @@
 .skillimage {
 	max-width: 80px;
 	max-height: 80px;
+}
+
+.workexp-image {
+	display: inline;
+	float: left;
+	padding: 10px;
+	max-width: 300px;
+	max-height: 150px;
+}
+
+.workexp-desc {
+	margin: 10px;
+	padding-left: 30px;
+	font-family: 'Droid Serif', serif;
+	color: #000000;
+	font-size: 1.5em;
+}
+
+.workexp-item ul {
+	margin: 30px;
+	font-size: 1.5em;
+	color: #000000;
+	font-family: 'Merriweather', sans-serif;
+}
+
+.workexp-text {
+	font-weight: bold;
 }
 
 .footer {
